CHANGES.txt - 2006-10-17
------------------------

CHANGES IN CUPS V1.3

	- Added new cupsRemoveDest() and cupsSetDefaultDest()
	  functions.
	- Added support for cupsPJLCharset attribute in PPD files
	  which specifies the character set that is used in PJL
	  strings (STR #1969)
	- Moved the definition of the (private) _http_s structure
	  to http-private.h; code that directly accesses the
	  http_t members will no longer compile!
	- Added support for setting the document-format-default
	  attribute on a per-printer basis.
	- Added support for IntelliBar label printers.